fix spacing between divs

--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -6,6 +6,7 @@ html, body {
 #welcome, #blogs, #projects, #about {
   width: 100%;
   min-height: 100%;
+  margin-bottom: 2em;
 }
 
 #welcome {
